@@ -685,6 +685,14 @@ Changes in the Python API
   Code that has already been updated in accordance with the deprecation
   warning generated by 3.5 will not be affected.
 
+* All optional parameters of the :func:`~json.dump`, :func:`~json.dumps`,
+  :func:`~json.load` and :func:`~json.loads` functions and
+  :class:`~json.JSONEncoder` and :class:`~json.JSONDecoder` class
+  constructors in the :mod:`json` module are now :ref:`keyword-only
+  <keyword-only_parameter>`.
+  (Contributed by Serhiy Storchaka in :issue:`18726`.)
+
+
 Changes in the C API
 --------------------
 
