@@ -10,6 +10,10 @@ What's New in Python 3.6.0 alpha 3
 Library
 -------
 
+- Issue #18726: All optional parameters of the dump(), dumps(),
+  load() and loads() functions and JSONEncoder and JSONDecoder class
+  constructors in the json module are now keyword-only.
+
 - Issue #27319: Methods selection_set(), selection_add(), selection_remove()
   and selection_toggle() of ttk.TreeView now allow passing multiple items as
   multiple arguments instead of passing them as a tuple.  Deprecated
